fix: horizontal scroll in sub-menu in the plain theme

--- a/src/styles/themes/proton/sidebar/popup.context-menu.styl
+++ b/src/styles/themes/proton/sidebar/popup.context-menu.styl
@@ -273,6 +273,8 @@
   left: -2px
 #root[data-theme="plain"] .CtxMenu .opt[data-separator="true"]
   padding: 0
+  width: calc(100% + var(--ctx-menu-opt-padding) - var(--ctx-menu-text-opt-inner-gap))
+  left: 0
 .CtxMenu .opt[data-separator="true"]:after
   content: ''
   position: relative
